--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -19,5 +19,10 @@
     </nav>
 		<h1>Stories, Podcasts, Recipies, and More!</h1>
     <p>Here's a bunch of my content...</p>
+    <ul>
+      <li><a href="/posts/post-1">Post 1</a></li>
+      <li><a href="/posts/post-2">Post 2</a></li>
+      <li><a href="/posts/post-3">Post 3</a></li>
+    </ul>
 	</body>
 </html>
