--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Amity | About"
 ---
 
 <html lang="en">
@@ -7,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Amity | About</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
     <nav>
@@ -17,7 +18,7 @@
         <li><a href="/media">Media</a></li>
       </ul>
     </nav>
-		<h1>About Amity</h1>
+		<h1>{pageTitle}</h1>
     <p>I'm a pro climber, soon-to-be registered dietician, and stoked on life!</p>
 	</body>
 </html>
