--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Amity | Home"
 ---
 
 <html lang="en">
@@ -7,10 +8,17 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/media">Media</a></li>
+      </ul>
+    </nav>
+		<h1>AMITY WARME</h1>
     <h3>My Astro Site</h3>
 	</body>
 </html>
