--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Amity | Media"
 ---
 
 <html lang="en">
@@ -7,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Amity | Media</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
     <nav>
