Learn incl styling in astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,9 @@
 ---
 const pageTitle = "Amity | About"
+const skills = ["climbing", "skiing", "baking", "trying hard"]
+const skillColor = "navy"
+const fontWeight = 800;
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -9,6 +13,17 @@ const pageTitle = "Amity | About"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
 	</head>
 	<body>
     <nav>
@@ -20,5 +35,9 @@ const pageTitle = "Amity | About"
     </nav>
 		<h1>{pageTitle}</h1>
     <p>I'm a pro climber, soon-to-be registered dietician, and stoked on life!</p>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
 	</body>
 </html>
