--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css'
 const pageTitle = "Amity | About"
 const skills = ["climbing", "skiing", "baking", "trying hard"]
 const skillColor = "navy"
