--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import Nav from '../components/Nav.astro'
 import '../styles/global.css'
 const pageTitle = "Amity | About"
 const skills = ["climbing", "skiing", "baking", "trying hard"]
@@ -27,13 +28,7 @@ const textCase = "uppercase"
     </style>
 	</head>
 	<body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/media">Media</a></li>
-      </ul>
-    </nav>
+    <Nav />
 		<h1>{pageTitle}</h1>
     <p>I'm a pro climber, soon-to-be registered dietician, and stoked on life!</p>
     <p>My skills are:</p>
