--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Nav from '../components/Nav.astro'
 import '../styles/global.css'
 const pageTitle = "Amity | Home"
 ---
@@ -12,13 +13,7 @@ const pageTitle = "Amity | Home"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/media">Media</a></li>
-      </ul>
-    </nav>
+    <Nav />
 		<h1>AMITY WARME</h1>
     <h3>My Astro Site</h3>
 	</body>
