--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -1,4 +1,5 @@
 ---
+import Nav from '../components/Nav.astro'
 import '../styles/global.css'
 const pageTitle = "Amity | Media"
 ---
@@ -12,13 +13,7 @@ const pageTitle = "Amity | Media"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/media">Media</a></li>
-      </ul>
-    </nav>
+    <Nav />
 		<h1>Stories, Podcasts, Recipies, and More!</h1>
     <p>Here's a bunch of my content...</p>
     <ul>
