Add footer component

--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -1,6 +1,8 @@
 ---
-import Nav from '../components/Nav.astro'
-import '../styles/global.css'
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "Amity | Media"
 ---
 
@@ -21,5 +23,6 @@ const pageTitle = "Amity | Media"
       <li><a href="/posts/post-2">Post 2</a></li>
       <li><a href="/posts/post-3">Post 3</a></li>
     </ul>
+    <Footer />
 	</body>
 </html>
