--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,8 @@
 ---
-import Nav from '../components/Nav.astro'
-import '../styles/global.css'
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "Amity | About"
 const skills = ["climbing", "skiing", "baking", "trying hard"]
 const skillColor = "navy"
@@ -35,5 +37,6 @@ const textCase = "uppercase"
     <ul>
       {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
+    <Footer />
 	</body>
 </html>
