--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
-import Nav from '../components/Nav.astro'
-import '../styles/global.css'
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "Amity | Home"
 ---
 
@@ -16,5 +18,6 @@ const pageTitle = "Amity | Home"
     <Nav />
 		<h1>AMITY WARME</h1>
     <h3>My Astro Site</h3>
+    <Footer />
 	</body>
 </html>
