Build header, import nav; style nav

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Nav from '../components/Nav.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -30,7 +30,7 @@ const textCase = "uppercase"
     </style>
 	</head>
 	<body>
-    <Nav />
+    <Header />
 		<h1>{pageTitle}</h1>
     <p>I'm a pro climber, soon-to-be registered dietician, and stoked on life!</p>
     <p>My skills are:</p>
