--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Nav from '../components/Nav.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -15,7 +15,7 @@ const pageTitle = "Amity | Home"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <Nav />
+    <Header />
 		<h1>AMITY WARME</h1>
     <h3>My Astro Site</h3>
     <Footer />
