--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -1,5 +1,5 @@
 ---
-import Nav from '../components/Nav.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -15,7 +15,7 @@ const pageTitle = "Amity | Media"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <Nav />
+    <Header />
 		<h1>Stories, Podcasts, Recipies, and More!</h1>
     <p>Here's a bunch of my content...</p>
     <ul>
