Create and add hamburger for mobile, w/ style

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,5 +19,8 @@ const pageTitle = "Amity | Home"
 		<h1>AMITY WARME</h1>
     <h3>My Astro Site</h3>
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
 	</body>
 </html>
