--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,18 @@ h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
 }
+/* nav styles */
+.mobile-hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+.mobile-hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
 .nav-links {
   width: 100%;
   top: 5rem;
@@ -53,6 +65,9 @@ h1 {
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+  }
+  .mobile-hamburger {
+    display: none;
   }
   
 }
