--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
-const pageTitle = "Amity | Home"
+const { pageTitle } = Astro.props;
 ---
 
 <html lang="en">
@@ -16,7 +16,7 @@ const pageTitle = "Amity | Home"
 	</head>
 	<body>
     <Header />
-		<h1>AMITY WARME</h1>
+    <h1>{pageTitle}</h1>
     <slot />
     <Footer />
     <script>
