--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Amity | Home"
 ---
-<BaseLayout>
+<BaseLayout pageTitle={pageTitle}>
   <h2>blog subtitle</h2>
 </BaseLayout>
