--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -1,15 +1,15 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-
-const pageTitle = "Amity | Media"
+const allPosts = await Astro.glob('./posts/*.md');
+const pageTitle = "Amity | Media";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<h3>Stories, Podcasts, Recipies, and More!</h3>
   <p>Here's a bunch of my content...</p>
   <ul>
-    <li><a href="/posts/post-1">Post 1</a></li>
-    <li><a href="/posts/post-2">Post 2</a></li>
-    <li><a href="/posts/post-3">Post 3</a></li>
+    {allPosts.map((post) => {
+      return <li><a href={post.url}>{post.frontmatter.title}</a></li>
+    })}
   </ul>
 </BaseLayout>
