Style media tags page; add link to nav

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,5 +3,6 @@
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/media">Media</a>
+    <a href="/tags">Media Tags</a>
   </div>
 </nav>
