--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -8,6 +8,26 @@ const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).fla
 <BaseLayout pageTitle="Tags Index">
   <h4>Find the tag you'd like to explore!</h4>
   <div class="tag-index-container">
-    {uniqueTags.map((tag) => <p><a href={`/tags/${tag}`}>{tag}</a></p> )}
+    {uniqueTags.map((tag) => (
+      <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p> 
+      ))}
   </div>
 </BaseLayout>
+<style>
+  a {
+    color: #00539f;
+  }
+  .tag-index-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+  .tag-item {
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: 0.5em;
+    padding: 0.5em 1em;
+    font-size: 1.15em;
+    background-color: #f8fcfd;
+  }
+</style>
