--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Greeting from '../components/Greeting.jsx';
 
 const pageTitle = "Amity | Home"
 ---
 <BaseLayout pageTitle={pageTitle}>
   <h2>blog subtitle</h2>
+  <Greeting client:load messages={["Hola", "Mahalo", "Marhaba", "Bonjour", "Hi", "Hello", "Hey there", "Howdy"]} />
 </BaseLayout>
