Create themeToggle (light and dark modes)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,5 +69,12 @@ h1 {
   .mobile-hamburger {
     display: none;
   }
-  
+}
+
+.dark body {
+  background-color: #0d0950;
+  color: #fff;
+}
+.dark .nav-links a {
+  color: #fff;
 }
