--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,11 @@
 ---
 import Hamburger from "./Hamburger.astro";
 import Nav from "./Nav.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
   <Hamburger />
   <Nav />
+  <ThemeIcon />
 </header>
