Rename page; create several new pages sans content

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,7 +2,10 @@
   <div class="nav-links">
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/media">Media</a>
-    <a href="/tags">Media Tags</a>
+    <a href="/athlete">Athlete</a>
+    <a href="/nutrition">Nutrition</a>
+    <a href="/content">Content</a>
+    <a href="/tags">Content Tags</a>
+    <a href="/contact">Contact</a>
   </div>
 </nav>
