Get a couple pages started

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,6 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle="Contact Me">
+  <h3>I'd love to hear from you!</h3>
 <form novalidate>
   <label for="first-name">
     <span>First Name:</span>
