Start into athlete achievements component

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -1,6 +1,8 @@
 ---
+import Achieve from "../components/Achieve.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle="Amity the Athlete">
+  <Achieve></Achieve>
 </BaseLayout>
