--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -1,6 +1,7 @@
 ---
 import Wall from "./Wall.astro";
 import Pitch from "./Pitch.astro";
+import Sponsor from "./Sponsor.astro";
 const bigwall = [
   {
     climb: 'FRIAD: Freerider In A Day',
@@ -82,7 +83,7 @@ const singleSport = [
   },
     {
     climb: 'Vesper',
-    grade: '5.13c/14a',
+    grade: '5.13d/14a',
     style: 'free, redpoint',
     location: 'The Fins'
   },
@@ -112,3 +113,5 @@ const singleSport = [
   <h3>Single Pitch Sport</h3>
   {singleSport.map((item) => <Pitch climb={item} />)}
 </div>
+
+<Sponsor />
