Add additonal achievements

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -3,6 +3,13 @@ import Wall from "./Wall.astro";
 import Pitch from "./Pitch.astro";
 import Sponsor from "./Sponsor.astro";
 const bigwall = [
+{
+    climb: 'El Corazon',
+    grade: '5.13b',
+    pitches: 32,
+    style: 'free, ground-up',
+    location: 'Yosemite',
+  },
   {
     climb: 'FRIAD: Freerider In A Day',
     grade: '5.13a',
@@ -68,6 +75,12 @@ const singleTrad = [
     location: 'The Fins',
   },
   {
+    climb: 'All Systems Go',
+    grade: '5.13c',
+    style: 'free, redpoint',
+    location: 'Sedona',
+  },
+  {
     climb: 'Buffaloes in Space',
     grade: '5.13',
     style: 'free, redpoint',
@@ -92,6 +105,12 @@ const singleSport = [
     grade: '5.13d',
     style: 'free, redpoint',
     location: 'The Monastery'
+  },
+  {
+    climb: 'Tombraider',
+    grade: '5.13d',
+    style: 'free, redpoint',
+    location: 'Rifle'
   },
 ];
 
