--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,11 +9,40 @@ const textCase = "uppercase"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>You'll often find me exceedingly stoked and always in motion, often rock climbing. I'm constantly pursuing the next big adventure. I find climbing compelling because it provides the opportunity for me to push my limits, physically and mentally, while exploring incredible landscapes and connecting with others in the mountain adventure tribe. I live in a van with my husband, Connor. We spend much of the year traveling to climbing destinations, seeking out adventures big and small. A couple of my favorite zones are Yosemite, CA, Indian Creek, UT, and Rocky Mountain National Park, CO. My secret climbing superpower is trying REALLY hard - I don’t give up! Feel free to say hi if you ever see me around!!</p>
+  <p>You'll often find me exceedingly stoked and always in motion, often rock climbing. I'm constantly pursuing the next big adventure.</p>
+  <p>My secret climbing superpower is trying REALLY hard - I don’t give up!</p>
+  <p>Feel free to say hi if you ever see me around!!</p>
   <h2>Why Climbing?</h2>
-    <p>I thrive on the opportunity to push myself both physically and mentally. Climbing provides a space for me to continually test my limits while also connecting with the world around me on a deeper level. I love digging deep to accomplish a goal.</p>
-    <p>I also appreciate connecting with climbing partners through a shared experience. I am always amazed at the accomplishments that teamwork and mutual stoke can lead to and I value learning from those around me. I find great joy in empowering others to believe in themselves and their ability to achieve something great.</p>
+    <p>
+      I find climbing compelling because it provides the opportunity to challenge myself while exploring incredible landscapes and connecting with others in the mountain adventure tribe.
+      I thrive when an objective pushes me to the limit, physically and mentally. I love digging deep to accomplish a goal.
+    </p>
+    <p>
+      I enjoy all climbing disciplines but feel most drawn to big wall climbing because it requires a combination of every skill in your repertoire in order to pull off a successful ascent!
+    </p>
+    <p>
+      I also appreciate connecting with climbing partners through a shared experience. I am always amazed at the accomplishments that teamwork and mutual stoke can lead to and I value learning from those around me. 
+      I find great joy in empowering others to believe in themselves and their ability to achieve something great.
+    </p>
   <h2>Why Nutrition?</h2>
+    <p>
+      I've been immersed in 'weight sensitive' sports my entire life. 
+      I'm acutely aware of the harmful mental and physical effects of underfueling, in one's athletic performance and long-term health.
+    </p>
+    <p>
+      I grew up doing competitive gymnastics. While I was fortunate to have positive role models around me as a young gymnast I still saw the negative ramifications of underfueling in others.
+      I suffered a career ending back injury, which may have been partly related to unintentional nutritional deficiencies.
+    </p>
+    <p>
+      After finding climbing, I became more aware of a pervasive attitude around weight and diet that encouraged underfueling. 
+      I saw this play out in my climbing journey and experienced the negative effects firsthand, and I have witnessed it in countless climbers around me.
+    </p>
+    <p>
+      Having long had an interest in sports performance and physiology, along with a passion for food and cooking, it seemed like a natural connection to integrate both aspects into a career.
+    </p>
+    <p>
+      Now, my goal is to help athletes use nutrition to maximize their performance while protecting long term health!
+    </p>
 </BaseLayout>
 
 
