Create gallery component (simple)

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -1,8 +1,12 @@
 ---
 import Achieve from "../components/Achieve.astro";
+import Gallery from "../components/Gallery.astro";
+import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle="Amity the Athlete">
-  <Achieve></Achieve>
+  <Achieve />
+  <Sponsor />
+  <Gallery />
 </BaseLayout>
