--- a/src/pages/nutrition.astro
+++ b/src/pages/nutrition.astro
@@ -1,6 +1,25 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Counseling from "../components/Counseling.astro";
 ---
 
-<BaseLayout pageTitle="Amity the Dietician">
+<BaseLayout pageTitle="Amity | Nutrition">
+  <div class="nutrition-intro-container">
+    <h1>My Dream</h1>
+    <p>I want to help <em>you</em> use nutrition to maximize your performance and preserve long-term health.</p>
+  </div>
+  <div class="philophy-container">
+    <h1>Philosophy</h1>
+  </div>
+  <div class="creds-container">
+    <h1>Credentials</h1>
+  </div>
+  <Counseling />
 </BaseLayout>
+<style>
+  em {
+    font-style: normal;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+</style>
