--- a/src/pages/nutrition.astro
+++ b/src/pages/nutrition.astro
@@ -4,15 +4,30 @@ import Counseling from "../components/Counseling.astro";
 ---
 
 <BaseLayout pageTitle="Amity | Nutrition">
+  <div class="opening-container">
+    <h1>Who can benefit from nutrition counseling?</h1>
+    <p>people who deal with x, y, z</p>
+    <p>people who want to maximize performance</p>
+    <p>people wanting to cultivate healthy eating habits</p>
+  </div>
   <div class="nutrition-intro-container">
     <h1>My Dream</h1>
     <p>I want to help <em>you</em> use nutrition to maximize your performance and preserve long-term health.</p>
   </div>
-  <div class="philophy-container">
+  <div class="philosophy-container">
     <h1>Philosophy</h1>
+    <p>Here's where my philosophy goes...</p>
   </div>
   <div class="creds-container">
     <h1>Credentials</h1>
+    <p>I have a Master's in Sports Nutrition from the University of Colorado in Colorado Springs (December 2021).</p>
+    <p>In 2022, I completed 1000 supervised practice hours, split between the following organizations:</p>
+    <ul>
+      <li>---, an outpatient clinic in Fort Collins, specializing in eating disorders...</li>
+      <li>The Vegetable Connection, a nonprofit that helps families access nutritious, locally grown food: "connecting families and farms to inspire life-long healthy eating"</li>
+      <li>Phoenix Suns, an NBA team, working alongside the team dietician</li>
+    </ul>
+    <p>I'm preparing to take the Registered Dietician exam (spring 2023).</p>
   </div>
   <Counseling />
 </BaseLayout>
