Rename gallery component; making gallery page

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -1,6 +1,6 @@
 ---
 import Achieve from "../components/Achieve.astro";
-import Gallery from "../components/Gallery.astro";
+// import Gallery from "../components/Gallery.astro";
 import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
@@ -13,5 +13,4 @@ const images = [golden, barnacle, wolverine]
 <BaseLayout pageTitle="Amity the Athlete">
   <Achieve />
   <Sponsor />
-  <Gallery array={images}/>
 </BaseLayout>
