Create gallery page, add link to nav

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,6 +3,7 @@
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/athlete">Athlete</a>
+    <a href="/gallery">Gallery</a>
     <a href="/nutrition">Nutrition</a>
     <a href="/content">Content</a>
     <a href="/tags">Content Tags</a>
