--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,13 +1,61 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import Nav from "../components/Nav.astro";
 import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
 import barnacle from "../images/gallery/Shaffer_Taylor-17.Lite.jpg";
 import wolverine from "../images/gallery/Wolverine.Lite.jpg";
 
 const images = [golden, barnacle, wolverine]
+
+// const displayImage = (input) => {
+//   const image = document.querySelector(`img{data-value=${input}`)
+//   image.setAttribute('class', 'gallery-image')
+// }
 ---
-<BaseLayout pageTitle="Gallery">
-<div class="gallery-container">
-  <img src={golden}>
+<div class="gallery-header-wrapper visible">
+  <header>
+    <div class="gallery-title">Gallery</div> 
+    <Nav />
+  </header>
 </div>
-</BaseLayout>
+<div class="gallery-container">
+  {images.map((image, index) => (
+    <div class="gallery-slide hidden" data-value={index}>
+      <img class="gallery-image" src={image} />
+    </div>
+  ))}
+</div>
+<script>
+  const displayImage = (input) => {
+  const imageContainer = document.querySelector(`div[data-value='${input}']`)
+  imageContainer.setAttribute('name', 'visible')
+}
+  displayImage(0)
+</script>
+<style>
+  .gallery-header-wrapper > header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 800;
+    display: flex;
+    justify-content: space-around;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 2%;
+  }
+  .gallery-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 80;
+  }
+  .gallery-image {
+    width: 100%;
+  }
+  .hidden {
+    display: none;
+  }
+  div[name=visible] {
+    display: block;
+  }
+</style>
