--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -1,6 +1,6 @@
 ---
 import Achieve from "../components/Achieve.astro";
-// import Gallery from "../components/Gallery.astro";
+import PhotoDisplay from "../components/PhotoDisplay.astro";
 import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
@@ -8,4 +8,5 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 <BaseLayout pageTitle="Amity the Athlete">
   <Achieve />
   <Sponsor />
+  <PhotoDisplay />
 </BaseLayout>
