--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -6,15 +6,6 @@ import wolverine from "../images/gallery/Wolverine.Lite.jpg";
 const images = [golden, barnacle, wolverine]
 const photoArray = Astro.props.array;
 
-const testArray = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-const nextClick = (current) => {
-  // set current img display to none
-  // set next img display to block
-  // update current image (on gallery..?)
-}
-const backClick = () => {
-  console.log('previous photo!')
-}
 ---
 <section aria-label="Photo Gallery">
   <div class="gallery" data-gallery>
@@ -78,9 +69,12 @@ body {
   position: absolute;
   inset: 0;
   opacity: 0;
+  transition: 250ms opacity ease-in-out;
+  transition-delay: 150ms;
 }
 .slide[data-active] {
   opacity: 1;
+  transition-delay: 0ms;
 }
 .slide > img {
   display: block;
